--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 						<div class="hover-mask">
 							<h2 class="project-title">PythonPH Kaizend</h2><!--Project Title -->
-							<p>a mstermind group</p><!--Project Subtitle -->
+							<p>a mastermind group</p><!--Project Subtitle -->
 						</div>
 
 						<!--==== Project Preview HTML ====-->
