Update nav links

--- a/index.html
+++ b/index.html
@@ -65,10 +65,16 @@
 						<li>
 							<a href="#about" class="scrollto">About Me</a>
 						</li>
+						<li>
+							<a href="#my-work" class="scrollto">My Work</a>
+						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
 								<h1>M<span>R</span></h1>
 							</a>
+						</li>
+						<li>
+							<a href="https://slides.com/codemickeycode">Slides</a>
 						</li>
 						<li>
 							<a href="#links" class="scrollto">Links</a>
@@ -180,7 +186,7 @@
  		<!-- ==============================================
 		PORTFOLIO
 		=============================================== -->
-		<section id="portfolio" class="gray-bg padding-top-bottom">
+		<section id="my-work" class="gray-bg padding-top-bottom">
 
 			<div class="container">
 
