--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 							<li class="scrollimation fade-right d4"><a href="https://twitter.com/codemickeycode"><i class="fa fa-twitter fa-fw"></i></a></li>
 							<li class="scrollimation fade-right"><a href="https://ph.linkedin.com/in/codemickeycode"><i class="fa fa-linkedin fa-fw"></i></a></li>
 							<li class="scrollimation fade-right"><a href="https://github.com/codemickeycode"><i class="fa fa-github fa-fw"></i></a></li>
-							<li class="scrollimation fade-right"><a href="http://blog.codemickeycode.com/"><i class="fa fa-pencil fa-fw"></i></a></li>
+							<li class="scrollimation fade-right"><a href="https://blog.codemickeycode.com/"><i class="fa fa-pencil fa-fw"></i></a></li>
 						</ul>
 					</p>
 				</header>
