Update about me

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
-						<p class="text-center scrollimation fade-in">I consider myself a realist idealist. I like to contribute to causes I care about in my small corner of the world in the most practical way I can.</p>
+						<p class="text-center scrollimation fade-in">I consider myself a realist idealist. I like contributing to causes I care about in my small corner of the world in the most practical way I can.</p>
 						<p class="text-center scrollimation fade-in">I <strong>co-founded <a href="https://python.ph">PythonPH</a></strong> in 2013, a volunteer-run programming community. I spend a lot of my free time as a volunteer doing admin, operations, coaching/mentoring the next gen leaders and organizing events for the community.</p>
 
 						<p class="text-center scrollimation fade-in">I also co-host a tech vlog called <strong><a href="https://www.youtube.com/channel/UClVfber_qaE0Eq86_AGqekw">PyLokal</a></strong> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p>
