Add presentations section

--- a/index.html
+++ b/index.html
@@ -424,6 +424,38 @@
 		</section>
 
 		<!-- ==============================================
+		PRESENTATIONS
+		=============================================== -->
+		<section id="presentations" class="white-bg padding-top-bottom">
+
+			<div class="container">
+
+				<header class="section-header text-center">
+
+					<h1 class="scrollimation scale-in">Presentations</h1>
+<!-- 					<h4 class="scrollimation scale-in">Pampanga Food Company Website</h4> -->
+					<p>A collection of presentations I did in the past.</p>
+
+				</header>
+
+				<div class="scrollimation fade-up">
+					<img class="img-responsive img-center" src="assets/chrome-top.png" alt="" />
+
+					<div class="img-wrapper">
+
+						<img class="img-responsive img-center" src="assets/presentations.gif" alt="" />
+
+						<p class="text-center on-hover"><a class="btn btn-meflat icon-right" href="https://slides.com/codemickeycode">View slides<i class="fa fa-arrow-right"></i></a></p>
+
+					</div>
+				</div>
+
+			</div>
+
+		</section>
+
+
+		<!-- ==============================================
 		CONTACT
 		=============================================== -->
 		<section id="links" class="dark-bg light-typo padding-top">
