--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://slides.com/codemickeycode">Presentations</a>
+							<a href="#presentations" class="scrollto">Presentations</a>
 						</li>
 						<li>
 							<a href="#links" class="scrollto">Links</a>
