Update my work section

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						>
 							<p>Kaizend is a mastermind group and exclusive training program for PythonPH core volunteers.</p>
 
-							<p>This program is aimed to develop technically competent leaders and systematize succession plans for PythonPH.</p>
+							<p>This program is aimed to develop technically competent and well-rounded leaders to systematize succession plans for PythonPH.</p>
 
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://python.ph">Visit PythonPH Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
