Update Kaizend details

--- a/index.html
+++ b/index.html
@@ -265,9 +265,13 @@
 							data-descr="a mastermind group and exclusive training program for PythonPH volunteers"
 							data-images="assets/kaizend2.png,assets/kaizend3.png"
 						>
-							<p>Kaizend is a mastermind group and exclusive training program for PythonPH core volunteers.</p>
+							<p><i>technical skills + soft skills + life skills</i>
+							</p>
 
-							<p>This program is aimed to develop technically competent and well-rounded leaders to systematize succession plans for PythonPH.</p>
+							<p>Kaizend is a <strong>mastermind group</strong> and <strong>exclusive training program</strong> for <strong>PythonPH core volunteers.</strong></p>
+
+							<p>This program is aimed to develop <strong>technically competent</strong> and <strong>well-rounded leaders</strong> to systematize succession plans for PythonPH.</p>
+
 
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://python.ph">Visit PythonPH Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
