Update django girls workshop details

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 						<img class="img-responsive project-image" src="assets/django-girls-2015.jpg"  alt=""><!--Project thumb -->
 
 						<div class="hover-mask">
-							<h2 class="project-title">Django Girls Workshop 2015</h2><!--Project Title -->
+							<h2 class="project-title">Django Girls Manila Workshop 2015</h2><!--Project Title -->
 							<p>MozspaceMNL, May 2015</p><!--Project Subtitle -->
 						</div>
 
