Update CodeHappy details

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
 
 							<p>We help teams become successful by enabling their Python development capabilities through our training, coaching and consulting services.</p>
 
+							<p>We are passionate about Python, Open Source, Software Craftsmanship and Engineering Culture.
+							</p>
+
 							<p class="text-right"><a class="btn btn-meflat icon-right" href="https://codehappy.ph">Visit Website<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
