Update landing page

--- a/index.html
+++ b/index.html
@@ -462,6 +462,38 @@
 		</section>
 
 
+				<!-- ==============================================
+		PRESENTATIONS
+		=============================================== -->
+		<section id="workspace" class="gray-bg padding-top-bottom">
+
+			<div class="container">
+
+				<header class="section-header text-center">
+
+					<h1 class="scrollimation scale-in">My Workspace</h1>
+<!-- 					<h4 class="scrollimation scale-in">Pampanga Food Company Website</h4> -->
+					<p>Sharing my WFH workspace setup at <a href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">inbytes.dev</a></p>
+
+				</header>
+
+				<div class="scrollimation fade-up">
+					<img class="img-responsive img-center" src="assets/chrome-top.png" alt="" />
+
+					<div class="img-wrapper">
+
+						<img class="img-responsive img-center" src="assets/workspace.jpg" alt="" />
+
+						<p class="text-center on-hover"><a class="btn btn-meflat icon-right" href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">Check out my workspace<i class="fa fa-arrow-right"></i></a></p>
+
+					</div>
+				</div>
+
+			</div>
+
+		</section>
+
+
 		<!-- ==============================================
 		CONTACT
 		=============================================== -->
