Update kaizend link

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							<p>This program is aimed to develop <strong>technically competent</strong> and <strong>well-rounded leaders</strong> to systematize succession plans for PythonPH.</p>
 
 
-							<p class="text-right"><a class="btn btn-meflat icon-right" href="http://python.ph">Visit PythonPH Website<i class="fa fa-arrow-right"></i></a></p>
+							<p class="text-right"><a class="btn btn-meflat icon-right" href="https://drive.google.com/file/d/1KwVVqDj61mVgk3gxwh9isqu5GYDJMtrF/view?usp=sharing">Learn More<i class="fa fa-arrow-right"></i></a></p>
 						</div>
 
 					</article><!--End Project Item -->
