--- a/index.html
+++ b/index.html
@@ -68,13 +68,19 @@
 						<li>
 							<a href="#my-work" class="scrollto">My Work</a>
 						</li>
+						<li>
+							<a href="#presentations" class="scrollto">Presentations</a>
+						</li>
 						<li id="logo">
 							<a href="#home" class="scrollto">
 								<h1>M<span>R</span></h1>
 							</a>
 						</li>
 						<li>
-							<a href="#presentations" class="scrollto">Presentations</a>
+							<a href="#workspace" class="scrollto">My Workspace</a>
+						</li>
+						<li>
+							<a href="https://blog.codemickeycode.com">Blog</a>
 						</li>
 						<li>
 							<a href="#links" class="scrollto">Links</a>
@@ -473,7 +479,7 @@
 
 					<h1 class="scrollimation scale-in">My Workspace</h1>
 <!-- 					<h4 class="scrollimation scale-in">Pampanga Food Company Website</h4> -->
-					<p>Sharing my WFH workspace setup at <a href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">inbytes.dev</a></p>
+					<p>I've updated my WFH workspace setup since the pandemic. Sharing some pics and details at <a href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">inbytes.dev</a></p>
 
 				</header>
 
