Update codehappy details

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 						<div class="hover-mask">
 							<h2 class="project-title">CodeHappy.ph</h2>
-							<p>a Python training & coaching company</p>
+							<p>a Python training company</p>
 						</div>
 
 						<div class="sr-only project-description"
@@ -242,10 +242,10 @@
 							data-descr="started a business :)"
 							data-images="assets/codehappy2.png"
 						>
-							<p>a Python training & coaching company.
+							<p>a Python training company.
 							</p>
 
-							<p>We help teams become successful by enabling their Python development capabilities through our training, coaching and consulting services.</p>
+							<p>We help build and grow Python teams through training and coaching.</p>
 
 							<p>We are passionate about Python, Open Source, Software Craftsmanship and Engineering Culture.
 							</p>
