Update landing page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<p class="text-center scrollimation fade-in">I'm a software engineer with 10+ years experience. I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in Python and related technologies.</p>
 
 
-						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Coach and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>. If you're looking to build/grow your Python team through training and coaching&nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk.</p>
+						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Trainer and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>. If you're looking to build/grow your Python team through training and coaching&nbsp;<i class="fa fa-laptop" aria-hidden="true"></i>, I can help. Let's talk.</p>
 
 
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
