Update about me

--- a/index.html
+++ b/index.html
@@ -132,7 +132,22 @@
 
 						<img class="img-responsive img-center img-circle scrollimation fade-left" src="assets/about.jpg" alt="" />
 
-						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an <strong>insane love</strong> for <strong>tech</strong> and <strong>building things.</strong></p>
+						<p class="text-center scrollimation fade-in">
+						I'm a <strong>Software Engineer</strong> with 14 years of experience, the <strong>Director of Operations</strong> of the <strong><a href="https://python.ph">Python Philippines (PythonPH)</a></strong> community, and a <strong><a href="https://www.python.org/psf">Python Software Foundation</a> Fellow</strong>.
+						</p>
+
+						<p class="text-center scrollimation fade-in">
+						As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. She specializes in backend and web development using Python and related technologies.
+						</p>
+
+						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Trainer and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>.
+
+						<p class="text-center scrollimation fade-in">
+						I consider myself a realist idealist. I love to defy the odds for the things I truly care about.
+						</p>
+
+
+<!-- 						<p class="text-center scrollimation fade-in">Hi! I'm Mickey. I have an <strong>insane love</strong> for <strong>tech</strong> and <strong>building things.</strong></p>
 
 						<p class="text-center scrollimation fade-in"><strong>[Work]</strong></p>
 						<p class="text-center scrollimation fade-in">I'm a software engineer with 10+ years experience. I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in Python and related technologies.</p>
@@ -144,7 +159,7 @@
 						<p class="text-center scrollimation fade-in"><strong>[Community]</strong></p>
 						<p class="text-center scrollimation fade-in">I consider myself a realist idealist. I like contributing to causes I care about in my small corner of the world in the most practical way I can.</p>
 						<p class="text-center scrollimation fade-in">I <strong>co-founded <a href="https://python.ph">PythonPH</a></strong> in 2013, a volunteer-run programming community. I spend a lot of my free time as a volunteer doing admin, operations, coaching/mentoring the next gen leaders and organizing events for the community.</p>
-
+ -->
 <!-- 						<p class="text-center scrollimation fade-in">I also co-host a tech vlog called <strong><a href="https://www.youtube.com/channel/UClVfber_qaE0Eq86_AGqekw">PyLokal</a></strong> where we explore Python and related technologies in the Philippines over coffee and peanut butter. <i class="fa fa-coffee" aria-hidden="true"></i> </p> -->
 
 						<p class="text-center"><a class="btn btn-meflat" href="mailto:mickey@codehappy.ph"><i class="fa"></i>Get in touch</a></p>
