Update about me

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						</p>
 
 						<p class="text-center scrollimation fade-in">
-						As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. She specializes in backend and web development using Python and related technologies.
+						As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in backend and web development using Python and related technologies.
 						</p>
 
 						<p class="text-center scrollimation fade-in">I currently work as a <strong>Python Trainer and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>.
