--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿OCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -110,10 +110,10 @@
                             </div>
                             <div class="col-md-5">
                                 <ul class="social-list">
-<!--                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+                                    <li><a href="https://twitter.com/codemickeycode"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="https://ph.linkedin.com/in/codemickeycode"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://github.com/codemickeycode"><i class="fa fa-github fa-fw"></i></a></li>
+                                    <li><a href="https://blog.codemickeycode.com/"><i class="fa fa-pencil fa-fw"></i></a></li>
                                 </ul>
                             </div>
                         </div>
