Add work, life, community

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <p>I'm a <strong>Software Engineer</strong> with 14 years of experience, the <strong>Director of Operations</strong> of the <strong><a href="https://python.ph">Python Philippines (PythonPH)</a></strong> community, and a <strong><a href="https://www.python.org/psf">Python Software Foundation</a> Fellow</strong>.</p>
 
                                 <p>
-                                As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in backend and web development using Python and related technologies.
+                                As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in <strong>backend and web development</strong> using <strong>Python</strong> and related technologies.
                                 </p>
 
                                 <p>I currently work as a <strong>Python Trainer and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>.
@@ -99,6 +99,38 @@
                     </div>
                 </section>
                 <!-- Hello text end-->
+                <!-- Tabs-->
+                <section class="module">
+                    <div class="container-fluid container-custom">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h2>Work, Life and Community</h2>
+                                <hr class="m-b-50">
+                                <!-- Tabs-->
+                                <ul class="nav nav-tabs">
+                                    <li class="active"><a href="#tab-1" data-toggle="tab">Work</a></li>
+                                    <li><a href="#tab-2" data-toggle="tab">Life</a></li>
+                                    <li><a href="#tab-3" data-toggle="tab">Community</a></li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane in active" id="tab-1">
+                                        <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
+
+                                        So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that :)
+                                        </p>
+                                    </div>
+                                    <div class="tab-pane" id="tab-2">
+                                        <p>I love coffee, good food, reading, walking and going on adventures.</p>
+                                    </div>
+                                    <div class="tab-pane" id="tab-3">
+                                        <p>Together with other leaders, I love to create "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
+                                    </div>
+                                </div>
+                                <!-- END TABS-->
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Counters end-->
                 <!-- Footer-->
