Update landing page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                         <p>I love coffee, good food, reading, walking and going on adventures.</p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
-                                        <p>Together with other leaders, I love to create "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
+                                        <p>Together with other leaders, I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
