Update landing page

--- a/index.html
+++ b/index.html
@@ -104,23 +104,25 @@
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
-                                <h2>Work, Life and Community</h2>
+                                <h2>Life, Work and Community</h2>
                                 <hr class="m-b-50">
                                 <!-- Tabs-->
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-1" data-toggle="tab">Work</a></li>
-                                    <li><a href="#tab-2" data-toggle="tab">Life</a></li>
+                                    <li class="active"><a href="#tab-1" data-toggle="tab">Life</a></li>
+                                    <li><a href="#tab-2" data-toggle="tab">Work</a></li>
                                     <li><a href="#tab-3" data-toggle="tab">Community</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-1">
+                                        <p>I love coffee, good food, reading, walking and going on adventures.</p>
+
+                                        <p>I've also been watching Naruto a lot lately. My favorite character is Shikamaru and the line <i>"Death is not the end. It's the loss of conviction that is."</i> hehe ;)</p>
+                                    </div>
+                                    <div class="tab-pane"  id="tab-2">
                                         <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
 
                                         So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that :)
                                         </p>
-                                    </div>
-                                    <div class="tab-pane" id="tab-2">
-                                        <p>I love coffee, good food, reading, walking and going on adventures.</p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
                                         <p>Together with other leaders, I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
