Update ;anding page

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         </p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
-                                        <p>Together with other leaders, I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
+                                        <p>I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
