Update landing page

--- a/index.html
+++ b/index.html
@@ -120,12 +120,18 @@
                                     </div>
                                     <div class="tab-pane"  id="tab-2">
                                         <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
-
+                                        </p>
+                                        <p>
                                         So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that :)
                                         </p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
-                                        <p>I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.</p>
+                                        <p>I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.
+                                        </p>
+                                        <p>
+                                        I also like contributing to causes I care about in my small corner of the world in the most practical way I can.
+                                        </p>
+                                        <p>So I spend a lot of my free time as a volunteer for PythonPH doing admin, operations, coaching and mentoring the next gen leaders, and organizing events for the community.</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
