Update landing page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                         <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
                                         </p>
                                         <p>
-                                        So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that while promoting software craftsmanship and healthy engineering cultures. :)
+                                        So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that while promoting software craftsmanship and fostering healthy engineering cultures. :)
                                         </p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
