Add talks and workshops

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         </div>
         <!-- Show menu end-->
         <!-- Menu-->
-<!--         <div class="overlay-menu">
+        <div class="overlay-menu">
             <div class="menu-table">
                 <div class="menu-table-cell">
                     <ul class="navigation">
                         <li><a href="index.html">Profile</a></li>
-                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="talks-and-workshops.html">Talks & Workshops</a></li>
+<!--                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="blog.html">Journal</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -56,11 +57,11 @@
                                 <li><a href="#">Item 3</a></li>
                                 <li><a href="#">Item 4</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Menu end-->
         <div class="wrapper">
             <!-- Hero section-->
