Update talks and workshops

--- a/talks-and-workshops.html
+++ b/talks-and-workshops.html
@@ -129,7 +129,7 @@
                                         <p>In this 30-min workshop, I'll quickly taught the basics of Python and its many possibilities.</p>
                                         <p>Earlier in my career, when I discovered Python, I immediately fell in love with it and its community. Since then, several amazing things happened and here I am today using it as my programming language of choice for work and hobby projects.</p>
                                         <p>I truly believe that it's indeed the <i>"language of getting things done"</i> and the supportive community just makes it easier to learn more about it! My goal is to share that feeling and experience to you.</p>
-                                        <p>If you missed the workshop, you can still watch the recording and read the materials here:
+                                        <p>If you missed the workshop, you can still watch the recording and browse through the materials here:
                                             <ul>
                                                 <li>- <a href="https://youtu.be/_Gw84iIgNCQ">Video Recording of the workshop</a></li>
                                                 <li>- <a href="https://slides.com/codemickeycode/magic-carpet-ride-to-python">Slides</a></li>
