Update talks and workshops

--- a/talks-and-workshops.html
+++ b/talks-and-workshops.html
@@ -65,7 +65,13 @@
         <!-- Menu end-->
         <div class="wrapper">
             <!-- Hero section-->
-            <section class="split-image parallax" data-background="assets/images/hero-image2.jpg"></section>
+            <section class="split-image parallax" data-background="assets/images/hero-image2.jpg">
+                    <div class="split-image-footer">
+                    <ul class="split-list">
+                        <li><a href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">My WFH workspace</a></li>
+                    </ul>
+                </div>
+            </section>
             <!-- Hero section end-->
             <!-- Content section-->
             <section class="split-content">
