--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
                                         <p>
                                         I also like contributing to causes I care about in my small corner of the world in the most practical way I can.
                                         </p>
-                                        <p>So I spend a lot of my free time as a volunteer for PythonPH doing admin, operations, coaching and mentoring the next gen leaders, and organizing events for the community.</p>
+                                        <h3>Python Community</h3>
+                                        <h4>- How I contribute:</h4>
+                                        <p>I spend a lot of my free time as a volunteer for PythonPH doing admin work, handling overall operations, and coaching and mentoring the next gen leaders so we can continue to organize <strong>meaningful events and programs for the tech community</strong> in an enjoyable and sustainable way.</p>
+                                        <h4>- Why I contribute?</h4>
+                                        <p>I first got introduced to Python and the world of open source when I attended my first PyCon PH in 2012. Since then, several amazing things happened. The community also became my most reliable support system throughout my career. It just feels good to give back :) </p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
