--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@
                                         <h4>- How I contribute:</h4>
                                         <p>I spend a lot of my free time as a volunteer for PythonPH doing admin work, handling overall operations, and coaching and mentoring the next gen leaders so we can continue to organize <strong>meaningful events and programs for the tech community</strong> in an enjoyable and sustainable way.</p>
                                         <h4>- Why I contribute?</h4>
-                                        <p>I first got introduced to Python and the world of open source when I attended my first PyCon PH in 2012. Since then, several amazing things happened. The community also became my most reliable support system throughout my career. It just feels good to give back :) </p>
+                                        <p>I first got introduced to Python and the world of open source when I attended my first PyCon PH in 2012. Since then, several amazing things happened. The community also became my most reliable support system throughout my career.</p>
+                                        <p>I discovered that:
+                                            <ul>
+                                                <li>- tech is a very democratizing career</li>
+                                                <li>- skills pay the bills</li>
+                                                <li>- there are a lot of crazy cool people in the Python and open source community</li>
+                                            </ul>
+                                        It just feels good to be part of that ecosystem and give back :)
+                                        </p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
