--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         <p><strong>I spend a lot of my free time as a volunteer for PythonPH</strong> doing admin work, handling overall operations, and coaching and mentoring the next gen leaders so we can continue to <strong>organize meaningful events and programs for the tech community</strong> in an enjoyable and sustainable way.</p>
                                         <h4>- Why I contribute?</h4>
                                         <p>I first got introduced to Python and the world of open source when I attended my first PyCon PH in 2012. Since then, several amazing things happened. The community also became my most reliable support system throughout my career.</p>
-                                        <p>I discovered that <strong>tech is a very democratizing career</strong>, <strong>skills pay the bills</strong>, and <strong>there are a lot of crazy cool people in the Python and open source community</strong>.</p>
+                                        <p>I discovered that <strong>tech is a very democratizing career</strong>, <strong>skills pay the bills</strong>, and there are <strong>lots of crazy cool people in the Python and open source community</strong>.</p>
                                         <p>
                                         It just feels good to be part of that ecosystem and give back :)
                                         </p>
