--- a/talks-and-workshops.html
+++ b/talks-and-workshops.html
@@ -137,7 +137,8 @@
                                         <p>I truly believe that it's indeed the <i>"language of getting things done"</i> and the supportive community just makes it easier to learn more about it! My goal is to share that feeling and experience to you.</p>
                                         <p>If you missed the workshop, you can still watch the recording and browse through the materials here:
                                             <ul>
-                                                <li>- <a href="https://youtu.be/_Gw84iIgNCQ">Video Recording of the workshop</a></li>
+                                                <li>- Video Recording of the workshop:
+                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/_Gw84iIgNCQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
                                                 <li>- <a href="https://slides.com/codemickeycode/magic-carpet-ride-to-python">Slides</a></li>
                                                 <li>- <a href="https://bit.ly/3lQC0im">Handouts pdf</a></li>
                                             </ul>
