Update homepage and talks

--- a/talks-and-workshops.html
+++ b/talks-and-workshops.html
@@ -66,7 +66,7 @@
         <div class="wrapper">
             <!-- Hero section-->
             <section class="split-image parallax" data-background="assets/images/hero-image2.jpg">
-                    <div class="split-image-footer">
+                <div class="split-image-footer">
                     <ul class="split-list">
                         <li><a href="https://inbytes.dev/workspaces/8-codemickeycode-workspace">My WFH workspace</a></li>
                     </ul>
@@ -83,7 +83,7 @@
                             <div class="col-sm-12">
                                 <div class="page-header">
                                     <h1>Talks and Workshops</h1>
-                                    <p>A collection of talks, workshops, webinars and podcasts I did or became part of.</p>
+                                    <p>A curated collection of talks, workshops, webinars and podcasts I did or became part of. Hopefully, you'll find some of them useful :)</p>
                                 </div>
                             </div>
                         </div>
