--- a/index.html
+++ b/index.html
@@ -67,12 +67,9 @@
             <!-- Hero section-->
             <section class="split-image parallax" data-background="assets/images/hero-image.jpg">
                 <div class="split-image-footer">
-<!--                     <ul class="split-list">
-                        <li>Download cv:</li>
-                        <li><a href="#">English</a></li>
-                        <li><a href="#">German</a></li>
-                        <li><a href="#">Spanish</a></li>
-                    </ul> -->
+                    <ul class="split-list">
+                        <li><a href="talks-and-workshops.html">Talks & Workshops</a></li>
+                    </ul>
                 </div>
             </section>
             <!-- Hero section end-->
