--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <section class="split-image parallax" data-background="assets/images/hero-image.jpg">
                 <div class="split-image-footer">
                     <ul class="split-list">
-                        <li><a href="talks-and-workshops.html">Talks & Workshops</a></li>
+                        <li><a href="talks-and-workshops.html">Python & Software Development Talks</a></li>
                     </ul>
                 </div>
             </section>
