--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-1">
                                         <p>I love coffee, good food, reading, walking and going on adventures.</p>
-
                                         <p>I've also been watching Naruto a lot lately. My favorite character is Shikamaru and the line <i>"Death is not the end. It's the loss of conviction that is."</i> :D</p>
+                                        <p>Fun fact: I'm an introvert but I love having friends. I love meeting people who are passionate about their craft, getting inspired and learning something from them.</p>
                                     </div>
                                     <div class="tab-pane"  id="tab-2">
                                         <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
