--- a/index.html
+++ b/index.html
@@ -146,6 +146,40 @@
                     </div>
                 </section>
 
+
+                <!-- Tabs-->
+                <section class="module">
+                    <div class="container-fluid container-custom">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h2>Random Stuff I Personally Recommend :)</h2>
+                                <hr class="m-b-50">
+                                <!-- Tabs-->
+                                <ul class="nav nav-tabs">
+                                    <li class="active"><a href="#tab-1" data-toggle="tab">Books</a></li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane in active" id="tab-1">
+                                        <h3>Non-Tech</h3>
+                                        <ul>
+                                            <li>- Company of One by Paul Jarvis</li>
+                                            <li>- The Dip: A Little Book That Teaches You When to Quit (and When to Stick) by Seth Godin</li>
+                                            <li>- The Hard Thing About Hard Things by Ben Horowitz</li>
+                                        </ul>
+
+                                        <h3>Tech</h3>
+                                        <ul>
+                                            <li>- The Passionate Programmer by Chad Fowler</li>
+                                            <li>- Soft Skills: The Software Developer's Life Manual by John Sonmez</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- END TABS-->
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
                 <!-- Counters end-->
                 <!-- Footer-->
                 <footer class="footer">
